visualization of hidden layers of cnn with pre-designed filter choices

--- a/cigar_cnn.ipynb
+++ b/cigar_cnn.ipynb
@@ -266,6 +266,15 @@
    "source": [
     "model.load_state_dict(torch.load('model_cifar.pt'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://github.com/udacity/deep-learning-v2-pytorch/blob/master/convolutional-neural-networks/cifar-cnn/cifar10_cnn_solution.ipynb"
+   ]
   }
  ],
  "metadata": {
